infrastructure/sealed-secrets/service-controller-patch.yml
apiVersion: v1
kind: Service
metadata:
  name: sealed-secrets-controller
  annotations:
    metallb.io/loadBalancerIPs: 10.1.16.2
spec:
  type: LoadBalancer
