infrastructure/sealed-secrets/service-metrics-patch.yml
apiVersion: v1
kind: Service
metadata:
  name: sealed-secrets-controller-metrics
  annotations:
    prometheus.starsystem.dev/scrape: "true"
    prometheus.starsystem.dev/scheme: http
    prometheus.starsystem.dev/path: /metrics
    prometheus.starsystem.dev/port: "8081"
