infrastructure/sealed-secrets/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sealed-secrets
  annotations:
    prometheus.starsystem.dev/scrape: "true"
    prometheus.starsystem.dev/scheme: http
    prometheus.starsystem.dev/path: /metrics
    prometheus.starsystem.dev/port: "8081"
spec:
  type: ClusterIP
  ports:
    - name: cert
      port: 8080
      targetPort: 8080
    - name: metrics
      port: 8081
      targetPort: 8081
