infrastructure/sealed-secrets/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sealed-secrets
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
    - host: cert.hydra.starsystem.dev
      http:
        paths:
          - path: /v1/cert.pem
            pathType: Prefix
            backend:
              service:
                name: sealed-secrets
                port:
                  number: 8080
